# Signdicnew

./: .replit  main.py  pyproject.toml  requirements.txt  sitemap.xml  videos.csv
templates/: index.html  privacy.html
